RESOLVED FIXED210701
[CSS selectors] :is() / :where() should not allow pseudo-elements at parse-time
https://bugs.webkit.org/show_bug.cgi?id=210701
Summary [CSS selectors] :is() / :where() should not allow pseudo-elements at parse-time
Emilio Cobos Álvarez (:emilio)
Reported 2020-04-18 15:21:18 PDT
https://drafts.csswg.org/selectors/#matches: > Pseudo-elements cannot be represented by the matches-any pseudo-class; they are not valid within :is(). That seems to me like :is(foo::before) should be invalid at parse-time. Instead webkit parses it, but never matches it.
Attachments
patch (3.91 KB, patch)
2020-04-19 01:57 PDT, Antti Koivisto
no flags
patch (613.42 KB, patch)
2020-04-19 05:56 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2020-04-19 01:57:27 PDT
Antti Koivisto
Comment 2 2020-04-19 05:56:29 PDT
EWS
Comment 3 2020-04-19 10:51:23 PDT
Committed r260338: <https://trac.webkit.org/changeset/260338> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396903 [details].
Radar WebKit Bug Importer
Comment 4 2020-04-19 10:52:13 PDT
Note You need to log in before you can comment on or make changes to this bug.