[CSS selectors] :is() / :where() should not allow pseudo-elements at parse-time https://bugs.webkit.org/show_bug.cgi?id=210701

Reviewed by Anders Carlsson.

Source/WebCore:

https://drafts.csswg.org/selectors/#matches:

"Pseudo-elements cannot be represented by the matches-any pseudo-class; they are not valid within :is()."

Test: fast/selectors/pseudo-element-in-is-where.html

* css/parser/CSSSelectorParser.cpp:
(WebCore::CSSSelectorParser::consumePseudo):

LayoutTests:

Remove or update tests for pseudo elements inside :is()/:where().
Also add some :where() rountrip coverage.

* fast/css/css-selector-text-expected.txt:
* fast/css/css-selector-text.html:
* fast/css/css-set-selector-text-expected.txt:
* fast/css/css-set-selector-text.html:
* fast/css/is-specificity-6-expected.html: Removed.
* fast/css/is-specificity-6.html: Removed.
* fast/css/matches-specificity-6-expected.html: Removed.
* fast/css/matches-specificity-6.html: Removed.
* fast/css/parsing-css-allowed-string-characters-expected.txt:
* fast/css/parsing-css-is-1-expected.txt:
* fast/css/parsing-css-is-1.html:
* fast/css/parsing-css-is-2-expected.txt:
* fast/css/parsing-css-is-2.html:
* fast/css/parsing-css-is-3-expected.txt:
* fast/css/parsing-css-is-3.html:
* fast/css/parsing-css-is-4-expected.txt:
* fast/css/parsing-css-is-4.html:
* fast/css/parsing-css-matches-1-expected.txt:
* fast/css/parsing-css-matches-1.html:
* fast/css/parsing-css-matches-2-expected.txt:
* fast/css/parsing-css-matches-2.html:
* fast/css/parsing-css-matches-3-expected.txt:
* fast/css/parsing-css-matches-3.html:
* fast/css/parsing-css-matches-4-expected.txt:
* fast/css/parsing-css-matches-4.html:
* fast/selectors/pseudo-element-in-is-where-expected.html: Added.
* fast/selectors/pseudo-element-in-is-where.html: Added.
* fast/selectors/pseudo-element-inside-is-expected.html: Removed.
* fast/selectors/pseudo-element-inside-is.html: Removed.
* fast/selectors/pseudo-element-inside-matches-expected.html: Removed.
* fast/selectors/pseudo-element-inside-matches.html: Removed.
* fast/selectors/querySelector-is-expected.txt:
* fast/selectors/querySelector-is.html:
* fast/selectors/querySelector-matches-expected.txt:
* fast/selectors/querySelector-matches.html:


Canonical link: https://commits.webkit.org/223598@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260338 268f45cc-cd09-0410-ab3c-d52691b4dbfc